--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-02c0e824-20241028",
